<resources>
    <string name="app_name">SmartNoteApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  RegisterFragment  -->
    <string name="enter_your_username_hint">Enter Your Username</string>
    <string name="enter_your_email_hint">Enter Your Email</string>
    <string name="enter_your_phone_hint">Enter Your Phone</string>
    <string name="enter_your_password_hint">Enter Your Password</string>
    <string name="signup">Signup</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_with_Google">Login with Google</string>
    <string name="login_with_Facebook">Login with Facebook</string>
    <string name="or_divider">Or</string>
    <string name="signup_error">Registration is failed</string>
    <string name="signup_successfully">You\'ve been signed up successfully</string>

    <!--  LoginFragment  -->
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_your_username_or_email_hint">Enter Your Username/Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="auth_failed">Firebase authentication failed</string>
    <string name="fill_email_and_password">Please, fill email and password fields</string>

    <!--  Bottom Navigation Bar  -->
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_videos">Videos</string>
    <string name="bottom_nav_add_note">Add Note</string>
    <string name="bottom_nav_favourites">Favourites</string>
    <string name="bottom_nav_profile">Profile</string>

    <!--  Create Note Fragment -->
    <string name="upload_images">Upload Images</string>
    <string name="enter_note_title">Enter Title:</string>
    <string name="enter_note_description">Enter Description:</string>
    <string name="create_note">Create</string>
    <string name="select_category">Select Category:</string>
    <string name="note_added_successfully">Your note has been added successfully!</string>

    <!--  Item My Note Layout -->
    <string name="title_example">Title Example</string>
    <string name="description_example">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        It has survived not only five centuries, but also the leap into electronic typesetting,
        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
        sheets containing Lorem Ipsum passages, and more recently with desktop publishing software
        like Aldus PageMaker including versions of Lorem Ipsum
    </string>

    <!--  Profile Fragment -->
    <string name="example_user_name">Emma Philips</string>
    <string name="example_user_nickname">emma_phil_123</string>
    <string name="example_user_age">25 y.o.</string>
    <string name="example_user_status">Big fan of Maths</string>
    <string name="example_user_phone">+380-123-4567</string>
    <string name="example_user_email">example@gmail.com</string>
    <string name="your_notes">Your Notes</string>
    <string name="activity">Activity</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="full_name_placeholders">%1%s %2$s</string>
    <string name="user_age_placeholders">%1$d y.o.</string>
    <string name="sign_out_successfully">You\'ve been signed out</string>

    <!--  Custom Text Layout  -->
    <string name="toast_text_example">Lorem Ipsum is simply dummy text</string>

    <!--  Item Note Action Layout  -->
    <string name="example_like_count">12356</string>

    <!-- My Fragments   -->
    <string name="example_hours_ago">12h ago</string>

    <!-- Own Note Fragment   -->
    <string name="btn_post">Post</string>
    <string name="btn_delete">Delete</string>
    <string name="note_posted_successful">Your note has been posted successfully!</string>
    <string name="note_delayed">Your note has been delayed in %1$d</string>
    <string name="note_deleted">Your note has been deleted</string>
    <string name="note_was_not_posted">Error while posting note</string>

    <!-- Posted Note Fragment   -->
    <string name="hide_btn">Hide Note</string>
    <string name="liked_count">Liked: %1$d</string>
    <string name="comments_count">Commented: %1$d</string>
    <string name="note_is_hidden">Your note is hidden</string>
    <string name="warning">Warning</string>
    <string name="do_you_want_to_hide_note">Do you really want to hide this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Posted Note Fragment   -->
    <string name="video_title_example">Video Title Example</string>
</resources>