<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_home"
        android:title="@string/bottom_nav_home"
        android:icon="@drawable/home"/>
    <item
        android:id="@+id/item_videos"
        android:title="@string/bottom_videos"
        android:icon="@drawable/video_icon"/>
    <item
        android:id="@+id/item_create_note"
        android:title="@string/bottom_nav_add_note"
        android:icon="@drawable/edit"/>
    <item
        android:id="@+id/item_favourites"
        android:title="@string/bottom_nav_favourites"
        android:icon="@drawable/heart"/>
    <item
        android:id="@+id/item_profile"
        android:title="@string/bottom_nav_profile"
        android:icon="@drawable/user"/>
</menu>