<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".notes.presentation.note.OwnNoteFragment"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_example"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/imageContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/gray"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:src="@drawable/example_2" />
        </LinearLayout>

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="7"
            android:ellipsize="end"
            android:layout_marginTop="20dp"
            android:text="@string/description_example"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:orientation="vertical"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/postBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_post"/>

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>

