<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="36dp"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userPhotoImageView"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:src="@drawable/example_administrator_male"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_user_name"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_hours_ago"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/titleTextView"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/video_title_example"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_example"
                android:textSize="14sp"
                android:maxLines="4"
                android:ellipsize="end"/>

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/videoPlayerView"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp">

        <com.example.smartnoteapp.notes.presentation.custom_views.NoteActionButton
            android:id="@+id/likeActionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:actionIcon="@drawable/gray_heart"
            app:actionText="@string/example_like_count"
            app:actionTextSize="14sp"/>

        <com.example.smartnoteapp.notes.presentation.custom_views.NoteActionButton
            android:id="@+id/commentActionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            app:actionIcon="@drawable/comment"
            app:actionText="@string/example_like_count"
            app:actionTextSize="14sp"/>

    </LinearLayout>


</LinearLayout>